# reroll

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: main.yml
src/: dice.pest  eval.rs  main.rs  parser.rs
