[package]
name = "reroll"
version = "1.0.0"
edition = "2024"
license-file = "LICENSE.md"
readme = "README.md"
homepage = "https://github.com/DVDTSB/reroll"
repository = "https://github.com/DVDTSB/reroll"
description = "cli app to roll dice!"

[dependencies]
fastrand = "2.3.0"
pest = "2.8.1"
pest_derive = "2.8.1"


[profile.release]
lto = true
codegen-units = 1
strip = true
